Add icons and get daily data from api

--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,126 @@
 </head>
 <body>
     <img id="cat" src="#">
+    <img id="tornado" src="#">
     <p id="weather"></p>
-    <button id="get"></button>
+    <button id="get">GET CAT</button>
+    <label>
+        <span>Location: </span>
+        <input id="location" type="text" placeholder="Search Location">
+    </label>
+
+    <div id="content">
+
+        <div id = "current">
+            <div class="info">
+                <div>
+                    <span>Latitude: </span>
+                    <span id="latitude"></span>
+                </div>
+                <div>
+                    <span>Longitude: </span>
+                    <span id="longitude"></span>
+                </div>
+                <div>
+                    <span>Location: </span>
+                    <span id="resolvedAddress"></span>
+                </div>
+                <div>
+                    <span>Time zone: </span>
+                    <span id="timezone"></span>
+                    <span id="tzoffset"></span>
+                </div>
+                <div>
+                    <span>Description: </span>
+                    <span id="description"></span>
+                </div>
+            </div>
+            <div class ="data">
+                <div>
+                    <span>Date Time: </span>
+                    <span class="datetime"></span>
+                </div>
+                <div>
+                    <span>Day: </span>
+                    <span class="day"></span>
+                </div>
+                <div>
+                    <span>Temp: </span>
+                    <span class="temp"></span>
+                </div>
+                <div>
+                    <span>Feels Like: </span>
+                    <span class="feelslike"></span>
+                </div>
+                <div>
+                    <span>Humidity: </span>
+                    <span class="humidity"></span>
+                </div>
+                <div>
+                    <span>Dew: </span>
+                    <span class="dew"></span>
+                </div>
+                <div>
+                    <span>Wind speed: </span>
+                    <span class="windspeed"></span>
+                </div>
+                <div>
+                    <span>Wind direction: </span>
+                    <span class="winddir"></span>
+                </div>
+                <div>
+                    <span>Pressure: </span>
+                    <span class="pressure"></span>
+                </div>
+                <div>
+                    <span>Visibility: </span>
+                    <span class="visibility"></span>
+                </div>
+                <div>
+                    <span>Cloud cover: </span>
+                    <span class="cloudcover"></span>
+                </div>
+                <div>
+                    <span>Solar radiation: </span>
+                    <span class="solarradiation"></span>
+                </div>
+                <div>
+                    <span>Solar energy: </span>
+                    <span class="solarenergy"></span>
+                </div>
+                <div>
+                    <span>UV Index: </span>
+                    <span class="uvindex"></span>
+                </div>
+                <div>
+                    <span>Conditions: </span>
+                    <span class="conditions"></span>
+                </div>
+                <div>
+                    <span>Icon: </span>
+                    <span class="icon"></span>
+                    <img class="icon-img" src="#">
+                </div>
+                <div>
+                    <span>Sun rise: </span>
+                    <span class="sunrise"></span>
+                </div>
+                <div>
+                    <span>Sun set: </span>
+                    <span class="sunset"></span>
+                </div>
+                <div>
+                    <span>Moon phase: </span>
+                    <span class="moonphase"></span>
+                </div>
+            </div>
+        </div>
+        <div id="daily">
+            
+        </div>
+        <div id="hourly">
+
+        </div>
+    </div>
 </body>
 </html>
